--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 .infocard{
                     display: flex;
                     width: 100%;
-                    justify-content: center;
+                    justify-content: space-between;
                     padding-left: 30px;
                     padding-top: 30px;
                     padding-bottom: 30px;
