--- a/index.html
+++ b/index.html
@@ -95,8 +95,7 @@
                 }
                 img:not(.logo), text{
                     width: 50%;
-                    justify-content: center;
-                    align-content: center;
+                    display: inline-block;
                 }
                 p, h2, h1{
                     color: antiquewhite;
@@ -110,6 +109,7 @@
                     padding-left: 30px;
                     padding-top: 30px;
                     padding-bottom: 30px;
+                    text-align: center;
                 }
                 .title-div{
                     position: fixed;
