--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
                 }
                 .body-div{
                     padding-top: 190px;
-                    background: linear-gradient(to bottom, black, rgb(74, 5, 5));rgb(51, 5, 5)rgb(70, 7, 7)
+                    background: linear-gradient(to bottom, black, rgb(74, 5, 5));rgb(51, 5, 5)rgb(70, 7, 7);
+                    justify-content: center;
                 }
                 
                 h1{
@@ -258,7 +259,7 @@
                 <h2 style="color: white;">Azula's Legacy</h2>
                 <hr />
                 <div class="legacy infocard">
-                    <img src="./legacy.jpeg" style="width: 50%; float: left;">
+                    <img src="./legacy.jpeg" style="width: 50%; float: left; margin: 10px;">
                     <div class="text">
                         <p>
                             Azula remains one of the most complex characters in the "Avatar: The Last Airbender" universe. Her journey from a prodigious firebender to a tragic figure grappling with her inner demons is a testament to the rich storytelling in the series. Despite her many flaws, Azula's story is a poignant exploration of the impact of parental expectations, sibling rivalry, and the search for identity and purpose.
