--- a/index.html
+++ b/index.html
@@ -124,7 +124,9 @@
                 .body-div{
                     padding-top: 190px;
                     background: linear-gradient(to bottom, black, rgb(74, 5, 5));rgb(51, 5, 5)rgb(70, 7, 7);
-                    justify-content: center;
+                    display: inline-block;
+                    txt-align: center;
+                    
                 }
                 
                 h1{
