--- a/index.html
+++ b/index.html
@@ -122,11 +122,10 @@
                     z-index: 1000;
                 }
                 .body-div{
-                    padding-top: 190px;
+                    padding-top: 110px;
                     background: linear-gradient(to bottom, black, rgb(74, 5, 5));rgb(51, 5, 5)rgb(70, 7, 7);
                     display: inline-block;
-                    txt-align: center;
-                    
+                    text-align: center;
                 }
                 
                 h1{
