--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                     padding-left: 30px;
                     padding-top: 30px;
                     padding-bottom: 30px;
+                    text-align: center;
                 }
                 .title-div{
                     position: fixed;
@@ -110,7 +111,6 @@
                     padding-top: 30px;
                     padding-bottom: 30px;
                     text-align: center;
-                    display: inline-block;
                 }
                 .title-div{
                     position: fixed;
@@ -130,6 +130,9 @@
                 
                 h1{
                     font-size: large;
+                }
+                .text{
+                    display: inline-block;
                 }
             }
         </style>
