--- a/index.html
+++ b/index.html
@@ -104,9 +104,7 @@
                 }
                 .infocard{
                     justify-content: center;
-                    padding-left: 30px;
-                    padding-top: 30px;
-                    padding-bottom: 30px;
+                    padding: 30px;
                     text-align: center;
                 }
                 .title-div{
