--- a/index.html
+++ b/index.html
@@ -129,6 +129,10 @@
                 .text{
                     display: inline-block;
                 }
+                .legacy{
+                    float: left;
+                }
+                    
             }
         </style>
     </head>
@@ -257,8 +261,8 @@
                 <hr />
                 <h2 style="color: white;">Azula's Legacy</h2>
                 <hr />
-                <div class="legacy infocard">
-                    <img src="./legacy.jpeg" style="width: 50%; float: left; margin: 10px;">
+                <div class="infocard">
+                    <img class="legacy" src="./legacy.jpeg" style="width: 50%; float: left; margin: 10px;">
                     <div class="text">
                         <p>
                             Azula remains one of the most complex characters in the "Avatar: The Last Airbender" universe. Her journey from a prodigious firebender to a tragic figure grappling with her inner demons is a testament to the rich storytelling in the series. Despite her many flaws, Azula's story is a poignant exploration of the impact of parental expectations, sibling rivalry, and the search for identity and purpose.
