--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                 <hr />
                 <div class="infocard">
                     <img class="legacy" src="./legacy.jpeg" style="width: 50%; float: left; margin: 10px;">
-                    <div class="text">
+                    <div class="tex">
                         <p>
                             Azula remains one of the most complex characters in the "Avatar: The Last Airbender" universe. Her journey from a prodigious firebender to a tragic figure grappling with her inner demons is a testament to the rich storytelling in the series. Despite her many flaws, Azula's story is a poignant exploration of the impact of parental expectations, sibling rivalry, and the search for identity and purpose.
                         </p>
