--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <div class="child-era infocard">
                     <img src="./childhood.jpg">
                     <div class="text">
-                        <h2>Childhood</h2>
+                        <h2>Azula as a kid</h2>
                         <p>
                             Azula exhibited exceptional talent in firebending from a young age, mastering techniques and displaying skills beyond her years. She was favored by her father over Zuko, who struggled with his bending and was seen as a disappointment. Her mother, Ursa, often showed more affection towards Zuko, which Azula resented. Azula’s manipulative and ambitious nature became apparent early on, as she enjoyed tormenting Zuko and other children.
                         </p>
